Transform mouse coordinates when inspecting inner WebContents.

Bug: 798934
Change-Id: I2b344466c96eb987cd5cddaf1c28c8ccd126291e