chrome/browser/devtools/devtools_window.cc
@@ -702,6 +702,15 @@ void DevToolsWindow::InspectElement(
   OpenDevToolsWindow(web_contents, DevToolsToggleAction::ShowElementsPanel());
   DevToolsWindow* window = FindDevToolsWindow(agent.get());
   if (window) {
+    // When there are nested WebContents, the renderer expects coordinates
+    // relative to the main frame, so we need to transform the coordinates from
+    // the root space to the current WebContents' main frame space.
+    if (auto* main_view = web_contents->GetMainFrame()->GetView()) {
+      auto transformed_point =
+          main_view->TransformRootPointToViewCoordSpace(gfx::PointF(x, y));
+      x = transformed_point.x();
+      y = transformed_point.y();
+    }
     agent->InspectElement(window->bindings_, x, y);
     if (should_measure_time)
       window->inspect_element_start_time_ = start_time;
