content/browser/renderer_host/render_widget_host_view_child_frame.cc
@@ -780,6 +780,24 @@ bool RenderWidgetHostViewChildFrame::TransformPointToCoordSpaceForView(
       transformed_point);
 }
 
+gfx::PointF RenderWidgetHostViewChildFrame::TransformRootPointToViewCoordSpace(
+    const gfx::PointF& point) {
+  if (!frame_connector_)
+    return point;
+
+  RenderWidgetHostViewBase* root_rwhv =
+      frame_connector_->GetRootRenderWidgetHostView();
+  if (!root_rwhv)
+    return point;
+
+  gfx::PointF transformed_point;
+  if (!root_rwhv->TransformPointToCoordSpaceForView(point, this,
+                                                    &transformed_point)) {
+    return point;
+  }
+  return transformed_point;
+}
+
 bool RenderWidgetHostViewChildFrame::IsRenderWidgetHostViewChildFrame() {
   return true;
 }
