content/browser/renderer_host/render_widget_host_view_child_frame.h
@@ -152,6 +152,8 @@ class CONTENT_EXPORT RenderWidgetHostViewChildFrame
       const gfx::PointF& point,
       RenderWidgetHostViewBase* target_view,
       gfx::PointF* transformed_point) override;
+  gfx::PointF TransformRootPointToViewCoordSpace(
+      const gfx::PointF& point) override;
 
   bool IsRenderWidgetHostViewChildFrame() override;
 
